initial init is without database componenta, and db_init format config file and build components

--- a/base/application/templates/introduction.html
+++ b/base/application/templates/introduction.html
@@ -5,6 +5,6 @@
     <title>base</title>
 </head>
 <body>
-<h1 style="text-align: center; color: #7277ff">Base project</h1>
+<h1 style="text-align: center; color: #7277ff">Base project: {{ app_name }}</h1>
 </body>
 </html>
