--- a/base/application/templates/introduction.html
+++ b/base/application/templates/introduction.html
@@ -5,6 +5,7 @@
     <title>base</title>
 </head>
 <body>
-<h1 style="text-align: center; color: #7277ff">Base project: {{ app_name }}</h1>
+<h1 style="text-align: center; color: #7277ff">Base project:</h1>
+<h1 style="text-align: center; color: #7277ff">{{ app_name }} v{{ app_version }} (BASE v{{ base_version }})</h1>
 </body>
 </html>
